# rust-velocypack

./: .travis.yml  Cargo.toml  README.md
src/: de.rs  error.rs  lib.rs  ser.rs
