[package]
name = "velocypack"
version = "0.1.3"
authors = ["Dave Challis <dave@suicas.net>"]
description = "Implementation of ArangoDB's VelocyPack protocol."
repository = "https://github.com/davechallis/rust-velocypack"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
serde = "1.0"
bitvec = "0.15"
log = "0.4"

[dev-dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
