[package]
name = "velocypack"
version = "0.1.4"
authors = ["Dave Challis <dave@suicas.net>"]
description = "Implementation of ArangoDB's VelocyPack protocol."
repository = "https://github.com/davechallis/rust-velocypack"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
serde = "1.0.116"
bitvec = "0.19"
log = "0.4"

[dev-dependencies]
serde = {version = "1.0.116", features = ["derive"]}
serde_json = "1.0.57"
